WIP: clean up self-update logic
Signed-off-by: Vladislav Doster <mvdoster@gmail.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,41 +1,30 @@
-ARG VERSION=latest
-FROM alpine:${VERSION}
+FROM debian:latest
 
-ARG PUSERNAME=user01
-ARG PUID=1000
-ARG PGID=1000
-ARG TERM=xterm-256color
-ARG ZINIT_ZSH_VERSION
+ENV DEBIAN_FRONTEND noninteractive
+ENV USER docker
 
-ENV PUSERNAME=${PUSERNAME} PUID=${PUID} PGID=${PGID} \
-    SHELL=/bin/zsh TERM=${TERM} ZINIT_ZSH_VERSION=${ZINIT_ZSH_VERSION}
+RUN apt-get update \
+&& apt-get install -y --no-install-recommends \
+  apt-transport-https automake \
+  ca-certificates cmake curl \
+  file \
+  git \
+  make \
+  subversion sudo \
+  unzip \
+  wget \
+  zsh \
+&& rm -rf /var/lib/apt/lists/*
 
-RUN apk --no-cache --virtual base add \
-        coreutils curl git libuser rsync sudo zsh && \
-    apk --no-cache --virtual zsh-build-tools add \
-        autoconf bash build-base ncurses-dev && \
-    apk --no-cache --virtual dev-tools add \
-        go jq nodejs-dev npm ruby-dev neovim
+ENV HOME /home/${USER}
+RUN useradd \
+    --create-home \
+    --home-dir ${HOME} ${USER} \
+	&& chown -R ${USER}:${USER} ${HOME} \
+	&& usermod -a -G sudo,root ${USER} \
+  && passwd --delete ${USER}
 
-RUN sed -ir 's#^(root:.+):/bin/ash#\1:/bin/zsh#' /etc/passwd && \
-    adduser -D -s /bin/zsh -u "${PUID}" -h "/home/${PUSERNAME}" \
-        "${PUSERNAME}" && \
-    printf "${PUSERNAME} ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/user && \
-    mkdir -p /src /data /data-static && \
-    chown -R "${PUID}:${PGID}" /data /data-static && \
-    ln -sfv /src/docker/zshenv /home/${PUSERNAME}/.zshenv && \
-    ln -sfv /src/docker/zshrc /home/${PUSERNAME}/.zshrc
+WORKDIR ${HOME}
+USER ${USER}
 
-WORKDIR /home/${PUSERNAME}
-VOLUME ["/src", "/data"]
-
-COPY --chown=${PUSERNAME} . /src
-
-USER ${PUSERNAME}
-
-# Fetch keys config and store it outside of ZINIT[HOME_DIR] since it might get
-# overridden at runtime (the /data volume)
-RUN ZINIT_HOME_DIR=/data-static ZSH_NO_INIT=1 \
-    zsh -ils -c -- '@zinit-scheduler burst'
-
-CMD ["/bin/zsh"]
+CMD ["zsh"]
